# Fichaje

./: .gitignore  LICENSE  README.md  data.lnk  export.lnk  notes.txt
Mac/: build.sh
app/: CMakeLists.txt
app/resources/: AppIcon.icns  app.rc  resources.qrc
app/src/: main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
excel/2025/: 03.xlsx  04.xlsx
